# SolveSpaceLib

./: CDemo.c  CMakeLists.txt  README.md  SolveSpaceSystem.cpp  SolveSpaceSystem.h  WellPathSCreator.cpp
libslvs/: CMakeLists.txt  config.h  util.cpp
libslvs/include/: slvs.h
libslvs/platform/: platform.cpp
